Frontend: Fix nav counter on small screens

--- a/frontend/src/css/navigation.css
+++ b/frontend/src/css/navigation.css
@@ -5,10 +5,14 @@
 #p-navigation .nav-count {
     opacity: 0.5;
     position: absolute;
-    left: 72px;
+    left: 80px;
     width: 40px;
     display: inline-block;
     text-align: right;
+}
+
+.v-list__group__header .v-list__group__header__append-icon {
+    padding-left: 8px !important;
 }
 
 #photoprism .p-page a,
